Refactoring to address many issues identified by SonarCloud